removed border from body element

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       font-family: 'open sans', sans-serif;
       background-color: black;
       margin: auto;
-      border: thin dashed purple;
+      /* border: thin dashed purple; */
     }
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
