--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/tylerthietje">Tyler Thietje</a>.
   </div>
 </body>
 </html>
