changed text color of footer labels.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
       margin: auto;
       /* border: thin dashed purple; */
     }
-    .attribution { font-size: 11px; text-align: center; }
+    .attribution { 
+      font-size: 11px; 
+      text-align: center;
+      color: #8b88a3;
+     }
     .attribution a { color: hsl(228, 45%, 44%); }
 
     .container {
