coded by link will now open in new window

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
       text-align: center;
       color: #8b88a3;
      }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution a { 
+      color: hsl(228, 45%, 44%); }
 
     .container {
       margin: 10%;
@@ -136,8 +137,8 @@
   </div>
 </div>
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://github.com/tylerthietje">Tyler Thietje</a>.
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.    
+    Coded by <a href="https://github.com/tylerthietje" target="_blank">Tyler Thietje</a>.
   </div>
 </body>
 </html>
