moved styles to separate file and modified index file.

--- a/index.html
+++ b/index.html
@@ -5,115 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="./css/styles.css">
   <title>Frontend Mentor | Stats preview card component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    * {
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: 'open sans', sans-serif;
-      background-color: black;
-      margin: auto;
-      /* border: thin dashed purple; */
-    }
-    .attribution { 
-      font-size: 11px; 
-      text-align: center;
-      color: #8b88a3;
-     }
-    .attribution a { 
-      color: hsl(228, 45%, 44%); }
-
-    .container {
-      margin: 10%;
-      display: flex;
-      width: 80%;
-      /* border: 2px solid red; */
-    }
-
-    .information {
-      border-top-left-radius: 10px;
-      border-bottom-left-radius: 10px;
-      align-items: left;
-      background-color: hsl(246, 38%, 16%);
-      color: white;
-      padding: 40px 0px 40px 80px;
-      width: 50%;
-      /* border: thin solid blue; */
-
-    }
-
-    .image {
-      background-image: url('images/image-header-desktop.jpg');
-      background-size: cover;
-      border-top-right-radius: 10px;
-      border-bottom-right-radius: 10px;
-      display: flex;
-      width: 50%;
-      border: thin solid lime;
-    }
-
-    .overlay {
-      border-top-right-radius: 10px;
-      border-bottom-right-radius: 10px;
-      position: inherit;
-      height: 100%;
-      width: 100%;
-      background: rgba(129, 29, 190, 0.6)
-    }
-
-    .stats {
-      display: flex;
-      justify-content: space-between;
-      padding-top: 40px;
-      width: 70%;
-      /* border: thin solid seagreen; */
-    }
-
-    h1 {
-      width: 80%;
-    }
-
-    p {
-      font-size: 14px;
-      color: #8b88a3;
-      width: 70%;
-    }
-
-    h2 {
-      width: 20%;
-      /* border: thin dashed yellow */
-    }
-
-
-    span.labels {
-      text-transform: uppercase;
-      font-size: 12px;
-      color: #8b88a3;
-      /* border: thin solid pink; */
-      letter-spacing: 2px;
-    }
-
-    .title {
-      color: #8e4cb1;
-    }
-
-    /* FOR MOBILE SCREENS */
-
-  @media (max-width: 400px) {
-    .container {
-      flex-direction: column;
-    }
     
-    .image {
-      height: 100%;
-    }
-    
-  }
 
   </style>
 </head>
@@ -133,10 +30,11 @@
   <div class="panel image">
     <div class="overlay"></div> 
   </div>
-</div>
+
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.       
     Coded by <a href="https://github.com/tylerthietje" target="_blank">Tyler Thietje</a>.
   </div>
+</div>
 </body>
 </html>
